--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,10 +5,11 @@
     android:layout_height="match_parent"
     android:background="@drawable/login_bg" >
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/pre_login_activity_rel_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/pre_login_activity_layout_colorbar"
@@ -16,77 +17,165 @@
             android:layout_height="wrap_content"
             android:background="@drawable/top_border" />
 
-
         <LinearLayout
             android:id="@+id/pre_login_activity_layout_social_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/pre_login_activity_layout_colorbar"
-            android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
             android:gravity="center"
-            android:orientation="horizontal" >
+            android:orientation="horizontal"
+            android:weightSum="3">
 
             <Button
-                android:id="@+id/pre_login_activity_layout_facebook_button"
-                android:layout_width="wrap_content"
+                android:id="@+id/pre_login_activity_layout_facebook_button_token"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
-                android:background="@drawable/facebook_login_bt" />
-
+                android:background="@drawable/facebook_login_bt"
+                android:layout_weight="1"
+                />
             <Button
-                android:id="@+id/pre_login_activity_layout_linkedin_button"
-                android:layout_width="wrap_content"
+                android:id="@+id/pre_login_activity_layout_facebook_button_token_user"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:background="@drawable/linkedin_login_bt" />
+                android:layout_marginRight="5dp"
+                android:background="@drawable/facebook_login_bt"
+                android:layout_weight="1"
+                />
+            <Button
+                android:id="@+id/pre_login_activity_layout_facebook_button_user"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:background="@drawable/facebook_login_bt"
+                android:layout_weight="1"
+                />
+
+
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:weightSum="3">
+            <Button
+                android:id="@+id/pre_login_activity_layout_linkedin_button_token"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/linkedin_login_bt"
+                android:layout_margin="2dp"
+                android:layout_weight="1"/>
+            <Button
+                android:id="@+id/pre_login_activity_layout_linkedin_button_token_user"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/linkedin_login_bt"
+                android:layout_margin="2dp"
+                android:layout_weight="1"/>
+            <Button
+                android:id="@+id/pre_login_activity_layout_linkedin_button_user"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/linkedin_login_bt"
+                android:layout_margin="2dp"
+
+                android:layout_weight="1"/>
+            </LinearLayout>
 
         <LinearLayout
             android:id="@+id/pre_login_activity_layout_social_btn_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/pre_login_activity_layout_social_btn"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"
             android:gravity="center"
-            android:orientation="horizontal" >
+            android:orientation="horizontal"
+            android:weightSum="3">
 
             <Button
-                android:id="@+id/pre_login_activity_layout_instagram_button"
+                android:id="@+id/pre_login_activity_layout_instagram_button_token"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="5dp"
-                android:background="@drawable/instagram_login_bt" />
-
+                android:layout_margin="2dp"
+                android:background="@drawable/instagram_login_bt"
+                android:layout_weight="1"/>
             <Button
-                android:id="@+id/pre_login_activity_layout_vk_button"
+                android:id="@+id/pre_login_activity_layout_instagram_button_token_user"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:background="@drawable/vk_login_bt" />
+                android:layout_margin="2dp"
+                android:background="@drawable/instagram_login_bt"
+                android:layout_weight="1"/>
+            <Button
+                android:id="@+id/pre_login_activity_layout_instagram_button_user"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="@drawable/instagram_login_bt"
+                android:layout_weight="1"/>
+
+
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/pre_login_activity_layout_social_btn_3"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:weightSum="3">
+            <Button
+                android:id="@+id/pre_login_activity_layout_vk_button_token"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="@drawable/vk_login_bt"
+                android:layout_weight="1"/>
+            <Button
+                android:id="@+id/pre_login_activity_layout_vk_button_token_user"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="@drawable/vk_login_bt"
+                android:layout_weight="1"/>
+            <Button
+                android:id="@+id/pre_login_activity_layout_vk_button_user"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="@drawable/vk_login_bt"
+                android:layout_weight="1"/>
+            </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/pre_login_activity_layout_social_btn_3"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/pre_login_activity_layout_social_btn_2"
-            android:layout_marginTop="10dp"
-            android:layout_centerHorizontal="true"
             android:gravity="center"
-            android:orientation="horizontal" >
+            android:orientation="horizontal"
+            android:weightSum="3">
 
             <Button
-                android:id="@+id/pre_login_activity_layout_google_plus_button"
-                android:layout_width="wrap_content"
+                android:id="@+id/pre_login_activity_layout_google_plus_button_token"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
-                android:background="@drawable/google_login_bt" />
+                android:background="@drawable/google_login_bt"
+                android:layout_weight="1"/>
+            <Button
+                android:id="@+id/pre_login_activity_layout_google_plus_button_token_user"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:background="@drawable/google_login_bt"
+                android:layout_weight="1"/>
+            <Button
+                android:id="@+id/pre_login_activity_layout_google_plus_button_user"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:background="@drawable/google_login_bt"
+                android:layout_weight="1"/>
+
 
         </LinearLayout>
 
 
-    </RelativeLayout>
+    </LinearLayout>
 
 </ScrollView>
