--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -134,6 +134,30 @@
                 android:layout_weight="1"/>
 
         </LinearLayout>
+        <LinearLayout
+            android:id="@+id/pre_login_activity_layout_social_btn_4"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:weightSum="2">
+
+            <Button
+                android:id="@+id/pre_login_activity_layout_odnoklassniki_button_token"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:background="@drawable/google_login_bt"
+                android:layout_weight="1"/>
+            <Button
+                android:id="@+id/pre_login_activity_layout_odnoklassniki_button_token_user"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:background="@drawable/google_login_bt"
+                android:layout_weight="1"/>
+
+        </LinearLayout>
 
 
     </LinearLayout>
